# ympd

./: CMakeLists.txt  README.md  aftermake  aptget-dev  install  mpd.conf  streamripper.h  validate-mp3  ympd.conf
cmake/: FindGTK3.cmake  FindLibMPDClient.cmake  FindLibSoup2.cmake  FindSqlite3.cmake  FindWebKit.cmake  FindWebKit3.cmake
db_test/: CMakeLists.txt
db_test/src/: ympd.c
htdocs/: index.html  index0.html  index2210.html  index26.html  list.html  menu.html  music_search.html
htdocs/css/: bootstrap-1.css  bootstrap.min.css  carradio.css  carradio.min.css  keyboard.css  keyboard.min.css  mpd.css  mpd.min.css  variables.less
htdocs/css11/: bootrb.css  bootstrap.min.css  mpd.min.css
htdocs/css13/: bootstrap.css  bootstrap.min.css  mpd.min.css  variables.less
htdocs/js/: keyboard.js  mpd.js  player.js  radiolist.js
inotify-test/: CMakeLists.txt
inotify-test/src/: poll_fs.c  poll_fs.h
kiosk-browser/: Makefile  browser3.c
libconfig-1.4.9/: Makefile  config.status  libtool
libconfig-1.4.9/doc/: Makefile
libconfig-1.4.9/examples/: Makefile
libconfig-1.4.9/examples/c/: Makefile  example1  example2  example3
libconfig-1.4.9/examples/c++/: Makefile  example1  example2  example3  example4
libconfig-1.4.9/examples/c++/.deps/: example1.Po  example2.Po  example3.Po  example4.Po
libconfig-1.4.9/examples/c++/.libs/: example1  example2  example3  example4
libconfig-1.4.9/examples/c/.deps/: example1.Po  example2.Po  example3.Po
libconfig-1.4.9/examples/c/.libs/: example1  example2  example3
libconfig-1.4.9/lib/: Makefile
libconfig-1.4.9/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo
libconfig-1.4.9/lib/.libs/: libconfig++.so.9.1.3  libconfig.so.9.1.3
libconfig-1.4.9/tests/: Makefile  libconfig_tests
libconfig-1.4.9/tests/.deps/: libconfig_tests-tests.Po
libconfig-1.4.9/tests/.libs/: libconfig_tests
libconfig-1.4.9/tinytest/: Makefile
libconfig-1.4.9/tinytest/.deps/: tinytest.Po
libstreamripper/: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
libstreamripper/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
libstreamripper/debian/: Makefile  changelog.in  control.in
libstreamripper/src/: Makefile  Makefile.am  Makefile.in  cbuf2.c  cbuf2.h  config.h  filelib.c  filelib.h  findsep.c  findsep2.c  lib.c  libstreamripper.h  libstreamripper.pc  libstreamripper.pc.in  list.h  prefs.c  rip_manager.c  ripogg.c  ripogg.h  srtypes.h
libstreamripper/src/.deps/: argv.Plo  cbuf2.Plo  charset.Plo  debug.Plo  errors.Plo  external.Plo  filelib.Plo  findsep.Plo  findsep2.Plo  http.Plo  iconvert.Plo  mchar.Plo  parse.Plo  prefs.Plo  relaylib.Plo  rip_manager.Plo  ripaac.Plo  ripogg.Plo  ripstream.Plo  socklib.Plo  threadlib.Plo  utf8.Plo
libstreamripper/src/sr/: compat.h  errors.h  prefs.h  rip_manager.h  srtypes.h
libstreamripper/test/: Makefile  gcs.txt  streamripper  streamripper.c
linux/boot/: xinitrc
linux/etc/: mpd.conf  rc.local
linux/home/pi/rcarmedia/: ympd.conf
mongoose-test/: CMakeLists.txt
mongoose-test/src/: mg-test.c
mpd-test/: CMakeLists.txt
mpd-test/src/: tools.c  ympd.c
src/: config.h.in  fswatch.c  fswatch.h  http_server.c  mpd_client.c  mpd_client.h  mpd_utils.c  mpd_utils.h  radio.c  radio.h  rcar_db.c  rcar_db.h  sql.c  sqlitedb.c  sqlitedb.h  streamripper.c  streamripper.h  ydebug.c  ydebug.h  ympd.c
streamripper-test/: CMakeLists.txt
streamripper-test/cmake/: FindGLIB2.cmake
streamripper-test/src/: streamripper.c  streamripper.h  ympd.c
